--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d97653fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f79cb350cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d97023d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0d97023f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79cad1db50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79cad1dd90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d975cd650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0d975cd850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79cb2c9490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79cb2c96d0&gt;]</pre>
 </div>
 
 </div>
