--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2eb5d3c750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f413d0b96d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eb59b4b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2eb59b4d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f413d676b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f413d676d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eb5f61410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2eb5f61610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f413dc35490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f413dc35690&gt;]</pre>
 </div>
 
 </div>
