--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f413d0b96d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2dd4bb9a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f413d676b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f413d676d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dd4586cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2dd4586f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f413dc35490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f413dc35690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dd4b35590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2dd4b357d0&gt;]</pre>
 </div>
 
 </div>
