--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21e1c86b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb32045290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21e1943b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21e1943d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb31ff9990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb32022e90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21e1eff450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21e1eff650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb325c4310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb325cd7d0&gt;]</pre>
 </div>
 
 </div>
