--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8257e8a850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1012a9b250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8251b51a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8251b51c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1012759b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1012759d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f825210d4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f825210d6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1012d14450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1012d14650&gt;]</pre>
 </div>
 
 </div>
