--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f39207ca510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa425f7ea10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3920d9ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3920d9bc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa425948d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa425948f90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39213463d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39213465d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa425ef9650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa425ef9850&gt;]</pre>
 </div>
 
 </div>
