--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa425f7ea10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4bb7af3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa425948d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa425948f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4ba983ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4ba983cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa425ef9650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa425ef9850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4baf334d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4baf336d0&gt;]</pre>
 </div>
 
 </div>
