--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa70e22e5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70ea3af810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa70dbeac10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa70dbeae10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70ea0b7dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70ea0b7fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa70e1a3590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa70e1a3790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70ea6646d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70ea6648d0&gt;]</pre>
 </div>
 
 </div>
