--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44c0f50bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe989283bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44c08ffc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44c08ffe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe988c3ca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe988c3cc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44c0eac450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44c0eac650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9891f4390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9891f4590&gt;]</pre>
 </div>
 
 </div>
