--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f13a3ca9050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa30d67e950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f13a3c5ad50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f13a3c5af50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa30d041a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa30d041c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f13a42076d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f13a42078d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa30d5f8390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa30d5f85d0&gt;]</pre>
 </div>
 
 </div>
