--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f604e136310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3b43e6510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f604e181a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f604e181c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3b4436910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3b4436b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f604e73a350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f604e73a550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3b49f6250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3b49f6450&gt;]</pre>
 </div>
 
 </div>
