--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb877e3c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fecd063df50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb8744db50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb8744dd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feccfff3a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feccfff3c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb879f8410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb879f8610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fecd05e67d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fecd05af5d0&gt;]</pre>
 </div>
 
 </div>
