--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6665f4a710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f7be71d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f666548ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f666548bc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f7b2c89d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f7b2c8bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66656cd310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66656cd510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f7b532310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f7b532510&gt;]</pre>
 </div>
 
 </div>
