--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2fa0400d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f923f5a7350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2f9217ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2f9217cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f923f27f990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f923f27fb90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2f97c4490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2f97c4690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f923f8352d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f923f8354d0&gt;]</pre>
 </div>
 
 </div>
