--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c22444f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cd4075c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c221bbc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c221bbe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cd34aca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cd34acc50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c227156d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c227158d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cd3716350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cd3716550&gt;]</pre>
 </div>
 
 </div>
