--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd37e63b690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6d9532390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd37e6b9ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd37e6b9d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6d921ea10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6d921ec10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd37e90e410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd37e90e650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6d9486410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6d9486610&gt;]</pre>
 </div>
 
 </div>
