--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6d9532390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5d41667410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6d921ea10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6d921ec10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d416fcc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5d41707190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6d9486410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6d9486610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d4194d590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5d419b3a90&gt;]</pre>
 </div>
 
 </div>
