--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc061b22650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb60f0c8a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc061045d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc061045f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb60f722bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb60f722dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0612a1650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0612a1850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb60f9725d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb60f9727d0&gt;]</pre>
 </div>
 
 </div>
