--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d91db7ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3931c0b8d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d92087b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d92087d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3931c8ea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3931c8ec50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d92634490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d92634690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3931ef7410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3931ef7610&gt;]</pre>
 </div>
 
 </div>
