--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f31565c8b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f895be70210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f31562d8ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f31562d8cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f895bb6dd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f895bb6df50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3156882450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3156882650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f895c13e610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f895c13e810&gt;]</pre>
 </div>
 
 </div>
