--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc575ab6090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f05798f70d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc574fd1a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc574fd1c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0578e11ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0578e11cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc57523a3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc57523a5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f057907a450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f057907a650&gt;]</pre>
 </div>
 
 </div>
