--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e0c3a1090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c7846ef50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e0c08fc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e0c08fe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c784d6a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c784d6cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e0c65b590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e0c65b790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c7873e450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c7873e690&gt;]</pre>
 </div>
 
 </div>
